<resources>
    <string name="app_name">CMS</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="loading">Loading</string>
    <string name="main_activity_title">Courses</string>
    <string name="create_course_activity_title">Create a Course</string>

    <string name="add_course">Add Course</string>
    <string name="hint_course">Course…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Item cannot be empty.</string>
    <string name="course_fob_description">Add a new Course</string>
    <string name="create_course_forum_course_code">Course Code</string>
    <string name="create_course_forum_course_name">Course Name</string>
    <string name="create_course_forum_lecturer_name">Lecturer Name</string>

    <string name="viewing_course_title">Viewing %1$s</string>
    <string name="enrolled_students">Enrolled Students</string>
    <string name="no_enrollments">No enrollments</string>
    <string name="enrol_button">Add student</string>
    <string name="add_new_student">Add a new student</string>
    <string name="enrol_student">Enrol a student to %1$s</string>
    <string name="create_student_matric">Matric</string>
    <string name="create_student_name">Name</string>
    <string name="create_student_email">Email</string>

    <string name="student_matric">Matric: %1$s</string>
    <string name="student_name">Name: %1$s</string>
    <string name="student_email">Email: %1$s</string>

    <string name="add_student">Add Student</string>
</resources>