<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/course_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_course_forum_course_code"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:text="@string/create_course_forum_course_name" />

    <TextView
        android:id="@+id/lecturer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/create_course_forum_lecturer_name"
        android:textSize="14sp"
        android:textStyle="italic" />
</LinearLayout>